@@ -1,4 +1,4 @@
-fwknop-2.6.10 (11//2016):
+fwknop-2.6.10 (08/06/2018):
     - [server] Add MAX_FW_TIMEOUT to access.conf stanzas to allow a maximum
       number of seconds for client-specified timeouts in SPA packets. This
       fixes issue #226 which was spotted by Jeremiah Rothschild.
@@ -9,6 +9,8 @@ fwknop-2.6.10 (11//2016):
     - [build] Jérémie Courrèges-Anglas and Ingo Feinerer contributed a patch
       to fix endian detection on OpenBSD systems based on information
       contained here: https://www.opengroup.org/austin/docs/austin_514.txt
+    - [client/server] (Michael Stair) Added client and server infrastructure
+      written in Erlang. See the erlang/ directory.
 
 fwknop-2.6.9 (06/08/2016):
     - (Jonathan Bennett) Added support for the SHA3 "Keccak" algorithm
